# VirusTotal-Polling

./: .gitignore  .gitmodules  CMakeLists.txt  Configuration.cpp  Configuration.h  README.md  VirusTotal-Polling.sln  VirusTotal-Polling.vcxproj  VirusTotal-Polling.vcxproj.filters  virustotalpolling.conf
external_libraries/json/: reader.inl
python/: communication.py
src/: Base64Coder.cpp  Base64Coder.h  Configuration.cpp  Configuration.h  HttpClient.cpp  HttpClient.h  HttpConnection.cpp  HttpConnection.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  JsonObject.cpp  JsonObject.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h  VirusTotalLogic.cpp  VirusTotalLogic.h  main.cpp
src/exception/: FileException.h  HttpClientException.h  RequestException.h
